--- a/style.css
+++ b/style.css
@@ -1,21 +1,21 @@
 *
 {
-  margin:0
+  margin:0;
   padding:0;
 }
 header
 {
-  background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(gig.jpg);
-  height:100vh;
-  background-size:cover;
-  background-position: center;
+  height:10vh;
+  position: absolute;
+  z-index: 1000;
 }
 
 .main-nav
 {
   float:right;
   list-style: none;
-  margin-top:30px
+  margin-top:40px;
+  margin-left:80px;
 }
 
 .main-nav li
@@ -30,4 +30,63 @@ header
   padding: 5px 20px;
   font-family:"Roboto", sans-serif;
   font-size:15px;
+}
+
+body{
+  position: relative;
+  
+}
+
+#logo
+{
+  font-family: 'Plaster', cursive;
+  font-size: 40px;
+  float: left;
+  color: white;
+  margin-left: 40px;
+  margin-top: 20px;
+}
+
+#welcome
+{
+  background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(gig.jpg);
+  background-size:cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding-top: 70px;
+  padding: auto 0;
+  width: 100%;
+  height: 400px;
+  text-align: center;
+}
+
+#welcome p {
+  margin-top: 180px;
+  font-family: "Roboto", sans-serif;
+  color: white;
+  font-size: 60px;
+}
+
+#about {
+  margin: 0 auto;
+list-style: none;
+width: 800px;
+}
+
+#about li {
+  float: left;
+  margin: 0 20px;
+  width: 200px;
+}
+
+#parent {
+  margin-top: 470px;
+  position: absolute;
+  width: 100%;
+}
+
+#content {
+  position: relative;
+  height: 100%;
+  width: 100%;
 }
