--- a/style.css
+++ b/style.css
@@ -117,6 +117,9 @@ background-color: black;
 .container1 {
   position: relative;
   color: black;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
 }
 
 /* Hide the images by default */
