--- a/gallery.css
+++ b/gallery.css
@@ -4,6 +4,7 @@
 
 #gallery-body
 {
+margin-top: 20px;
     background-color: #050000;
     padding: 20px;
     font-family: "Nunito", sans-serif;
@@ -40,7 +41,7 @@ h1 {
     display: none; /* Hide columns by default */
 }
 
-/* Clear floats after rows */ 
+/* Clear floats after rows */
 .row:after {
     content: "";
     display: table;
