--- a/style.css
+++ b/style.css
@@ -4,23 +4,27 @@
   padding:0;
 }
 
+
 header
 {
   height:10vh;
   position: absolute;
   z-index: 1000;
   width: 100%;
+  margin-top: 30px;
 }
 
 header .row {
   display: flex;
   justify-content: space-between;
+  margin-left: 5%;
 }
 
 .main-nav
 {
   list-style: none;
   margin-top: 40px;
+  margin-left: 13%;
 }
 
 .main-nav li
@@ -56,7 +60,7 @@ font-family: 'Nunito', sans-serif;
 
 #welcome
 {
-  background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(gig.jpg);
+  background-image:linear-gradient(rgba(26,0,51,0.5),rgba(26,0,51,0.5)), url(gig.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -72,7 +76,10 @@ font-family: 'Nunito', sans-serif;
   margin-top: 180px;
   font-family: "Nunito", sans-serif;
   color: white;
-  font-size: 60px;
+  font-size: 55px;
+  margin-left: auto;
+  margin-right: auto;
+  width:90%
 }
 
 #about {
@@ -84,11 +91,13 @@ font-family: 'Nunito', sans-serif;
   list-style: none;
   width: 100%;
   padding: 50px 5% 300px 5%;
+
 }
 
 #about li {
   width: 30%;
-  border: 1px solid purple;
+  border: 3px solid #8000ff;
+   border-radius: 5px;
   color: white;
   text-align: center;
   font-family: "Nunito", sans-serif;
@@ -210,7 +219,7 @@ font-family: 'Nunito', sans-serif;
 #Newsletter
 .form  {
 
-margin-top: 300px
+margin-top: 100px
       border: 4px solid #f1f1f1;
 
 
@@ -219,6 +228,7 @@ margin-top: 300px
   /* Add some padding and a grey background color to containers */
   .container2 {
       padding: 20px;
+      padding-top: 50px;
       background-color: black;
       margin-left: auto;
       margin-right: auto;
@@ -290,4 +300,24 @@ margin-top: 300px
 .fa-twitter {
     background: #55ACEE;
     color: white;
+}
+
+#myBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: #8000ff; /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
+}
+
+#myBtn:hover {
+    background-color: #555; /* Add a dark-grey background on hover */
 }
