--- a/contact.css
+++ b/contact.css
@@ -62,7 +62,7 @@
     display: inline-block;
     padding: 8px;
     color: white;
-    background-color: #555;
+    background-color: #6600cc ;
     text-align: center;
     cursor: pointer;
     width: 100%;
@@ -71,7 +71,7 @@ margin-top:20px;
 }
 
 .button:hover {
-    background-color: #6600cc;
+    background-color:#bf80ff;
 }
 
 #contactid
